<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="8dp"
    android:background="@drawable/car_item_background"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvImageHolder"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivCarImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/carnew"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvImageHolder">

        <TextView
            android:id="@+id/tvCarType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/mulish"
            android:text="@string/car_type"
            android:textColor="@color/custom_black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCarName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/car_name"
            android:textColor="@color/custom_black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tvCarType"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCarYearType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/mulish"
            android:text="@string/invention_year"
            android:textColor="@color/custom_black"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/tvCarYear"
            app:layout_constraintStart_toEndOf="@id/tvCarName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCarYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/_2015"
            android:textColor="@color/custom_black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tvCarYearType"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint1">

        <TextView
            android:id="@+id/tvPriceType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/mulish"
            android:text="@string/price"
            android:textColor="@color/custom_black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/_23000"
            android:textColor="@color/custom_black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tvPriceType"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEngineCapacityType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/mulish"
            android:text="@string/capacity"
            android:textColor="@color/custom_black"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/tvEngineCapacity"
            app:layout_constraintStart_toEndOf="@id/tvPrice"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEngineCapacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/_5_5"
            android:textColor="@color/custom_black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tvEngineCapacityType"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/addedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/data_sample"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint2"
        />

</androidx.constraintlayout.widget.ConstraintLayout>